Fix image distortion on older WebKit browsers

--- a/client/src/components/TabletOrMobile/Landscape/dark.module.css
+++ b/client/src/components/TabletOrMobile/Landscape/dark.module.css
@@ -245,6 +245,10 @@
   width: 100%;
 }
 
+.meLinkImg {
+  width: 100%;
+}
+
 .meHorizontalRule {
   border-bottom: rgb(var(--light-primary-rgb)) solid 0.02em;
   margin-top: 1em;
